--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="stypr, AS400671, Harold Kim, harold.kim">
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
@@ -124,20 +124,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4></h4>
+                    <div class="col-lg-8">
+                        <div class="my-3 px-4 py-2 bg-body shadow-sm">
                             <br>
                             <h6>
-                                AS400671 (AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operations, security researches, and network managements.<br><br>
-                                The entire network infrastructures and dashboard system are operated, maintained and managed by <a href="https://stypr.com">stypr</a>. <br><br>
+                                AS400671 (part of AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operation, security research, and automated network management. There are plans to extend the network for anycast DNS and CDN support in the upcoming years.<br><br>
+
+                                The entire network infrastructure and dashboard system are operated, maintained, and managed by stypr. Please note that the network is kept on a best-effort basis, and it is likely that resolving any issue may take up to 72 hours.<br><br>
                             </h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="my-3 p-3 bg-body shadow-sm">
+
                             <h4>Peering Policy</h4>
                             <br>
                             <h6>
@@ -146,22 +141,39 @@
                                 For the list of interconnected exchange points, please refer to <a href="/#exchanges">Exchanges</a> for more details.
                                 <br><br>
 
-                                To peer with AS400671, you must meet the following requirements.<br>
-                                Not following conditions are subject to termination without notice.
-                                <br><br>
+                                To peer with AS400671, you must meet the following requirements: <br><br>
                                 <ul>
                                     <li>ASN must be valid and public.</li>
                                     <li>ASN must announce at least one or more legitimate prefixes.</li>
                                     <li>PeeringDB entries must be up to date.</li>
-                                    <li>Announced prefixes must be legitimate, valid, and public.</li>
+                                    <li>Announced prefixes must be legitimate, accurate, and public.</li>
                                 </ul>
 
-                                Please contact <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">pgp</a>) for any inquiries regarding the peering policy.
-                                <br>
+                                Not following conditions are subject to termination without any prior notice.<br>
+                                Don't hesitate to get in touch with <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">PGP</a>) for any inquiries regarding the peering policy.
+                                <br><br>
                             </h6>
                         </div>
                     </div>
                     <div class="col-lg-4">
+                        <div class="my-3 p-3 bg-body shadow-sm">
+                            <h4>Contact</h4>
+                            <br>
+                            <h6>
+                                <ul class="ml-0">
+                                    <li>
+                                        <b>Network Operations</b><br>
+                                        <a href="#">serv<span class="d-none">digial-server</span>er+noc&#64;s<span class="d-none">sty</span>typr.com</a><br><br>
+                                    </li>
+                                    <li>
+                                        <b>Address</b><br>
+                                        stypr LLC<br>
+                                        1309 Coffeen Avenue STE 1200<br>
+                                        Sheridan, WY 82801
+                                    </li>
+                                </ul>
+                            </h6>
+                        </div>
                         <div class="my-3 p-3 bg-body shadow-sm">
                             <h4>Links</h4>
                             <br>
@@ -169,12 +181,12 @@
                                 <ul>
                                     <li class="pb-3">
                                         <b>PeeringDB</b><br>
-                                        <a href="https://www.peeringdb.com/net/29832">https://www.peeringdb.com/net/29832</a>
+                                        <a href="https://www.peeringdb.com/net/29832">//www.peeringdb.com/net/29832</a>
                                     </li>
                                     <li>
                                         <b>KNOC</b><br>
                                         Korea Network Operation Center<br>
-                                        <a href="https://knoc.cc/">https://knoc.cc/</a>
+                                        <a href="https://knoc.cc/">//knoc.cc/</a>
                                     </li>
                                 </ul>
                             </h6>
