--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="stypr, AS400671, Harold Kim, harold.kim">
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
@@ -124,9 +124,9 @@
                         </div>
                     </div>
                     <div class="row pt-3">
-                        <div class="col-md-4">
-                            <div class="card bg-body rounded-0 shadow-sm">
-                                    <div class="card-header py-3">
+                        <div class="col-md-12 col-lg-4">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4">
+                                <div class="card-header py-3">
                                     <h4 class="my-0 fw-normal">IPv6 Lease</h4>
                                 </div>
                                     <div class="card-body">
@@ -136,41 +136,41 @@
                                         <li>Exclusively available for business customers</li>
                                         <li> &nbsp;</li>
                                     </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="location.href='mailto:serverdlease&#64;stypr.com';">
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0" onclick="location.href='mailto:serverdlease&#64;stypr.com';">
                                         Contact Operator
                                     </button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="card bg-body rounded-0 shadow-sm">
+                        <div class="col-md-12 col-lg-4">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4">
                                 <div class="card-header py-3">
-                                <h4 class="my-0 fw-normal">Dedicated Server</h4>
+                                    <h4 class="my-0 fw-normal">Dedicated Server</h4>
                                 </div>
                                 <div class="card-body">
-                                <h1 class="card-title pricing-card-title">$60<small class="text-muted fw-light">/mo</small></h1>
-                                <ul class="list-unstyled mt-3 mb-4">
-                                    <li>8GB RAM &middot; i8700T</li>
-                                    <li>1Gbps &middot; Fair Use Policy</li>
-                                    <li>Best-effort support</li>
-                                </ul>
-                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Out of Stock</button>
+                                    <h1 class="card-title pricing-card-title">$60<small class="text-muted fw-light">/mo</small></h1>
+                                    <ul class="list-unstyled mt-3 mb-4">
+                                        <li>8GB RAM &middot; i8700T</li>
+                                        <li>1Gbps &middot; Fair Use Policy</li>
+                                        <li>Best-effort support</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0 disabled">Out of Stock</button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="card bg-body rounded-0 shadow-sm">
+                        <div class="col-md-12 col-lg-4">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4">
                                 <div class="card-header py-3 border-primary2 text-bg-primary2 rounded-0">
                                     <h4 class="my-0 fw-normal">WireGuard VPN</h4>
                                 </div>
                                 <div class="card-body">
-                                <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
-                                <ul class="list-unstyled mt-3 mb-4">
-                                    <li>Providing IPv6 VPN network</li>
-                                    <li>1Gbps &middot; Fair Use Policy</li>
-                                    <li>Best-effort support</li>
-                                </ul>
-                                <button type="button" class="w-100 btn btn-lg btn-primary disabled">Request Access</button>
+                                    <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
+                                    <ul class="list-unstyled mt-3 mb-4">
+                                        <li>Providing IPv6 VPN network</li>
+                                        <li>1Gbps &middot; Fair Use Policy</li>
+                                        <li>Best-effort support</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-primary rounded-0 disabled">Request Access</button>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-muted" href="https://github.com/AS400671/dashboard">
+                        <a class="text-muted" href="https://github.com/AS400671">
                             <svg class="bi" width="24" height="24">
                                 <use xlink:href="#github" />
                             </svg>
