design: layout typo, tr fix

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8">
-                        <div class="my-3 px-4 py-2 bg-body shadow-sm">
+                        <div class="my-3 mb-1 px-4 py-2 bg-body shadow-sm">
                             <br>
                             <h6>
                                 AS400671 (part of AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operation, security research, and automated network management. There are plans to extend the network for anycast DNS and CDN support in the upcoming years.<br><br>
