design: layout updates on lg

--- a/looking-glass.html
+++ b/looking-glass.html
@@ -288,10 +288,11 @@
             <div class="d-none align-items-center my-5" id="page-traceroute">
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
-                        <table class="table table-responsive mb-0">
+                        <table class="table table-hover     table-responsive mb-0">
                             <thead class="table-dark">
                                 <th>PoP</th>
-                                <th class="text-center">&nbsp;</th>
+                                <th>hops</th>
+                                <th>AS Path</th>
                             </thead>
                             <tbody id="traceroute-body">
                             </tbody>
