design: refresh dashboard cache

--- a/looking-glass.html
+++ b/looking-glass.html
@@ -22,43 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208041520" rel="stylesheet">
-    <style>
-        .search-box {
-            position: relative;
-        }
-
-        .search-box svg {
-            position: absolute;
-            right: 13px;
-            top:15px;
-            color:#ced4da;
-        }
-
-        .search-box .form-control {
-            height: 50px;
-            background-color:#eeeeee69;
-        }
-
-        .search-box .form-control:focus {
-            background-color: #eeffee69;
-            box-shadow: none;
-            border-color: #aaccaa;
-        }
-
-        .search-box .form-control:focus + a svg {
-            color: #aaccaa !important;
-        }
-
-        .text-monospace-lg {
-            font-size: 10pt;
-            font-family: "Oxygen Mono", monospace;
-        }
-
-        .text-monospace-default {
-            font-family: "Oxygen Mono", monospace;
-        }
-    </style>
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208060439" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -375,8 +339,8 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js"></script>
-    <script src="/static/javascript/looking-glass.js"></script>
+    <script src="/static/javascript/init.js?2208060439"></script>
+    <script src="/static/javascript/looking-glass.js?2208060439"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
