revert: "fix: remove debugging info for lg"
This reverts commit fcf777082c3268a71eaceced7b7b46fe1b2dc531.

--- a/looking-glass.html
+++ b/looking-glass.html
@@ -271,6 +271,7 @@
                         <table class="table table-responsive mb-0">
                             <thead class="table-dark">
                                 <th>PoP</th>
+                                <th class="text-center">&nbsp;</th>
                             </thead>
                             <tbody id="bgproute-body">
                             </tbody>
