refactor: title, meta desc

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
                                     </li>
                                     <li>
                                         <b>is_dprk_route</b><br>
-                                        Reject <a href="https://www.hrnk.org/">North Korea</a> routes
+                                        Reject routes containing <a href="https://www.hrnk.org/">North Korea</a> ASNs
                                         <br><br>
                                     </li>
                                 </ul>
