design: typo fix

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
                                     </li>
                                     <li>
                                         <b>is_dprk_route</b><br>
-                                        Reject routes containing <a href="https://www.hrnk.org/">North Korea</a> ASNs
+                                        Reject <a href="https://www.hrnk.org/">North Korea</a> ASNs and IP ranges
                                     </li>
                                 </ul>
                             </h6>
