feat(dashboard): plug security filter and communities in

--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="AS400671">
     <meta property="og:description" content="stypr network &middot; network.stypr.com">
     <title>404 | AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208080413" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -119,7 +119,7 @@
             <div class="row">
 
                 <div class="col-md-12 text-center">
-                    <img src="https://minio.dnaroma.eu/sekai-assets/stamp/stamp0395_rip/stamp0395/stamp0395.png"> 
+                    <img src="/static/images/404.webp"> 
                     <br>
                     <h1>404 Not Found</h1>
                 </div>
@@ -167,7 +167,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208080413"></script>
+    <script src="/static/javascript/init.js?2208090020"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
