--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="About AS400671">
     <meta property="og:description" content="About AS400671(AS-STYPR)">
     <title>About | AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208080413" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -129,6 +129,8 @@
                             <br>
                             <h6>
                                 AS400671 (part of AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operation, security research, and automated network management. There are plans to extend the network for anycast DNS and CDN support in the upcoming years.<br><br>
+                                
+                                <a href="/#community">BGP Large Communities</a> is supported, so don't forget to take advantage of this attribute when importing or checking routes from the network.<br><br>
 
                                 The entire network infrastructure and dashboard system are operated, maintained, and managed by stypr. Please note that the network is kept on a best-effort basis, and it is likely that resolving any issue may take up to 72 hours.<br><br>
                             </h6>
@@ -191,49 +193,6 @@
                                 </ul>
                             </h6>
                         </div>
-                        <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Enforced Filters</h4>
-                            <br>
-                            <h6>
-                                <ul>
-                                    <li>
-                                        <b>is_valid_rpki</b><br>
-                                        Reject invalid <a href="https://en.wikipedia.org/wiki/Resource_Public_Key_Infrastructure">RPKI</a> routes
-                                        <br><br>
-                                    </li>
-                                    <li>
-                                        <b>is_martian_[v4|v6]</b><br>
-                                        Reject bogon prefixes
-                                        <br><br>
-                                    </li>
-                                    <li>
-                                        <b>is_martian_asn</b><br>
-                                        Reject bogon ASNs
-                                        <br><br>
-                                    </li>
-                                    <li>
-                                        <b>is_small_prefix[v4|v6]</b><br>
-                                        Reject small prefixes
-                                        <br><br>
-                                    </li>
-                                    <li>
-                                        <b>is_[short|long]_aspath</b><br>
-                                        Reject invalid AS paths
-                                        <br><br>
-
-                                    </li>
-                                    <li>
-                                        <b>in_transit_path</b><br>
-                                        Reject paths containing known transits on IXPs
-                                        <br><br>
-                                    </li>
-                                    <li>
-                                        <b>is_dprk_route</b><br>
-                                        Reject <a href="https://www.hrnk.org/">North Korea</a> ASNs and IP ranges
-                                    </li>
-                                </ul>
-                            </h6>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -281,7 +240,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208080413"></script>
+    <script src="/static/javascript/init.js?2208090020"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
