--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="AS400671 Dashbaord">
     <meta property="og:description" content="AS400671(AS-STYPR) Dashboard">
     <title>AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208080413" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -118,15 +118,14 @@
                 <nav class="nav" aria-label="Secondary navigation">
                     <a class="nav-link" aria-current="page" href="#infrastructure">
                         Infrastructures
-                        <span class="badge text-bg-success align-text-bottom" id="counter-pop-alive">..</span>
-                        <span class="badge text-bg-danger  align-text-bottom" id="counter-pop-dead">..</span>
+                        <span class="rounded-pill badge text-bg-success align-text-bottom" id="counter-pop-alive">..</span>
+                        <span class="rounded-pill badge text-bg-danger  align-text-bottom" id="counter-pop-dead">..</span>
                     </a>
-                    <a class="nav-link" href="#prefixes"> Prefixes <span class="badge text-bg-secondary rounded-pill align-text-bottom" id="counter-prefixes">..</span>
-                    </a>
-                    <a class="nav-link" href="#exchanges"> Exchanges <span class="badge text-bg-secondary rounded-pill align-text-bottom" id="counter-exchanges">..</span>
-                    </a>
-                    <a class="nav-link" href="#connectivity"> Connectivity <span class="badge text-bg-secondary rounded-pill align-text-bottom" id="counter-connectivity">..</span>
-                    </a>
+                    <a class="nav-link" href="#prefixes"> Prefixes <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-prefixes">..</span></a>
+                    <a class="nav-link" href="#exchanges"> Exchanges <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-exchanges">..</span></a>
+                    <a class="nav-link" href="#connectivity"> Connectivity <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-connectivity">..</span>
+                    <a class="nav-link" href="#community"> Communities <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-community">..</span>
+                    <a class="nav-link" href="#filter"> Security <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-filter">..</span></a>
                 </nav>
             </div>
         </div>
@@ -157,7 +156,7 @@
                 </div>
             </div>
 
-            <div class="d-none" id="page-infrastrcuture">
+            <div class="d-none" id="page-infrastructure">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <div class="mb-10">
                         <h1 class="h2">Infrastructures</h1>
@@ -201,7 +200,6 @@
                             <th>&nbsp;</th>
                             <th>Prefix</th>
                             <th class="d-none d-sm-none d-md-table-cell d-lg-table-cell d-xl-table-cell">Description</th>
-                            <th class="d-none d-sm-none d-md-table-cell d-lg-table-cell d-xl-table-cell">RPKI</th>
                         </thead>
                         <tbody id="prefixes-body">
                         </tbody>
@@ -251,6 +249,78 @@
                     </table>
                 </div>
             </div>
+
+            <div class="d-none" id="page-community">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <div class="mb-12">
+                        <h1 class="h2">BGP Large Communities</h1>
+                        <h6>List of currently supported BGP Large Communities (<a href="https://www.rfc-editor.org/rfc/rfc8092.html">RFC8092</a>)</h6>
+                    </div>
+                </div>
+                <div class="my-3 p-0 bg-body shadow-sm">
+                    <table class="table table-responsive">
+                        <thead class="table-dark">
+                            <th style="width: 130px;" class="text-end"></th>
+                            <th style="width: 30px;">&nbsp;</th>
+                            <th>Description</th>
+                        </thead>
+                        <tbody id="community-body">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="d-none" id="page-filter">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <div class="mb-12">
+                        <h1 class="h2">Enforced  BGP Filters</h1>
+                        <h6>List of enforced BGP filters to enhance the overall network security</h6>
+                    </div>
+                </div>
+                <div class="my-3 p-0 bg-body shadow-sm">
+                    <table class="table table-responsive">
+                        <thead class="table-dark">
+                            <th style="width: 160px;" class="text-end"></th>
+                            <th>Description</th>
+                        </thead>
+                        <tbody id="filter-body">
+                            <tr>
+                                <td class="text-monospace text-end align-middle">400671:x:100</td>
+                                <td>Directly announced by AS400671</td>
+                                <td>300</td>
+                            </tr>
+                            <tr>
+                                <td class="text-monospace text-end align-middle">400671:x:101</td>
+                                <td>Learned from upstreams</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td class="text-monospace text-end align-middle">400671:x:102</td>
+                                <td>Learned from customers</td>
+                                <td>200</td>
+                            </tr>
+                            <tr>
+                                <td class="text-monospace text-end align-middle">400671:x:103</td>
+                                <td>Learned from direct peers</td>
+                                <td>200</td>
+                            </tr>
+                            <tr>
+                                <td class="text-monospace text-end align-middle">400671:x:104</td>
+                                <td>Learned from healthcheck route servers</td>
+                                <td>50</td>
+                            </tr>
+                            <tr>
+                                <td class="text-monospace text-end align-middle">
+                                    400671:x:200<br>
+                                    ~ 400671:x:299
+                                </td>
+                                <td class="align-middle">Learned from exchange points</td>
+                                <td class="align-middle">150</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center my-0 py-2 mt-auto bg-white border-top">
@@ -293,8 +363,8 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208080413"></script>
-    <script src="/static/javascript/dashboard.js?2208080413"></script>
+    <script src="/static/javascript/init.js?2208090020"></script>
+    <script src="/static/javascript/dashboard.js?2208090020"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
