--- a/looking-glass.html
+++ b/looking-glass.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="AS400671 Looking Glass">
     <meta property="og:description" content="AS400671(AS-STYPR) Looking Glass">
     <title>Looking Glass | AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208080413" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -252,7 +252,7 @@
             <div class="d-none align-items-center my-5" id="page-traceroute">
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
-                        <table class="table table-hover     table-responsive mb-0">
+                        <table class="table table-hover table-responsive mb-0">
                             <thead class="table-dark">
                                 <th>PoP</th>
                                 <th>hops</th>
@@ -338,8 +338,8 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208080413"></script>
-    <script src="/static/javascript/looking-glass.js?2208080413"></script>
+    <script src="/static/javascript/init.js?2208090020"></script>
+    <script src="/static/javascript/looking-glass.js?2208090020"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
