--- a/services.html
+++ b/services.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="AS400671 Services">
     <meta property="og:description" content="AS400671(AS-STYPR) Services">
     <title>Services | AS400671 (AS-STYPR)</title>
-    <link rel="shortcut icon" href="https://stypr.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://stypr.com/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208080413" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -127,16 +127,16 @@
                         <div class="col-md-12 col-lg-4">
                             <div class="card bg-body rounded-0 shadow-sm mb-4">
                                 <div class="card-header py-3">
-                                    <h4 class="my-0 fw-normal">IPv6 Lease</h4>
+                                    <h4 class="my-0 fw-normal">Global CDN</h4>
                                 </div>
                                     <div class="card-body">
                                     <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
                                     <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Providing 1Gbps IPv6 /48 address spaces</li>
+                                        <li>Providing unlimited 1Gbps CDN</li>
                                         <li>Exclusively available for business customers</li>
                                         <li> &nbsp;</li>
                                     </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0" onclick="location.href='mailto:serverdlease&#64;stypr.com';">
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0" onclick="location.href='mailto:server%2blease&#64;stypr.com';">
                                         Contact Operator
                                     </button>
                                 </div>
@@ -220,7 +220,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208080413"></script>
+    <script src="/static/javascript/init.js?2208090020"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
