refactor: titles and about info

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="About AS400671">
     <meta property="og:title" content="About AS400671">
     <meta property="og:description" content="About AS400671(AS-STYPR)">
-    <title>About | AS400671 (AS-STYPR)</title>
+    <title>About | AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
@@ -171,7 +171,15 @@
                                         <b>Address</b><br>
                                         stypr LLC<br>
                                         1309 Coffeen Avenue STE 1200<br>
-                                        Sheridan, WY 82801
+                                        Sheridan, WY 82801<br><br>
+                                    </li>
+                                    <li>
+                                        <b>IRR AS-SET</b><br>
+                                        AS-STYPR<br><br>
+                                    </li>
+                                    <li>
+                                        <b>IPv4 Max Prefix:</b> 16<br>
+                                        <b>IPv6 Max Prefix:</b> 256<br><br>
                                     </li>
                                 </ul>
                             </h6>
@@ -187,7 +195,6 @@
                                     </li>
                                     <li>
                                         <b>KNOC</b><br>
-                                        Korea Network Operation Center<br>
                                         <a href="https://knoc.cc/">//knoc.cc/</a>
                                     </li>
                                 </ul>
