--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="AS400671 Dashboard">
     <meta property="og:title" content="AS400671 Dashbaord">
     <meta property="og:description" content="AS400671(AS-STYPR) Dashboard">
-    <title>AS400671 (AS-STYPR)</title>
+    <title>Dashboard | AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
