refactor: layout changes

--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
                                     </li>
                                     <li>
                                         <b>IPv4 Max Prefix:</b> 16<br>
-                                        <b>IPv6 Max Prefix:</b> 256<br><br>
+                                        <b>IPv6 Max Prefix:</b> 256
                                     </li>
                                 </ul>
                             </h6>
