--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="AS400671 Dashboard">
     <meta property="og:title" content="AS400671 Dashbaord">
     <meta property="og:description" content="AS400671(AS-STYPR) Dashboard">
-    <title>Dashboard | AS400671</title>
+    <title>AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
@@ -118,14 +118,14 @@
                 <nav class="nav" aria-label="Secondary navigation">
                     <a class="nav-link" aria-current="page" href="#infrastructure">
                         Infrastructures
-                        <span class="rounded-pill badge text-bg-success align-text-bottom" id="counter-pop-alive">..</span>
-                        <span class="rounded-pill badge text-bg-danger  align-text-bottom" id="counter-pop-dead">..</span>
+                        <span class="rounded-pill badge text-bg-success align-text-bottom" id="counter-pop-alive"></span>
+                        <span class="rounded-pill badge text-bg-danger  align-text-bottom" id="counter-pop-dead"></span>
                     </a>
-                    <a class="nav-link" href="#prefixes"> Prefixes <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-prefixes">..</span></a>
-                    <a class="nav-link" href="#exchanges"> Exchanges <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-exchanges">..</span></a>
-                    <a class="nav-link" href="#connectivity"> Connectivity <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-connectivity">..</span>
-                    <a class="nav-link" href="#community"> Communities <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-community">..</span>
-                    <a class="nav-link" href="#filter"> Security <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-filter">..</span></a>
+                    <a class="nav-link" href="#prefixes"> Prefixes <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-prefixes"></span></a>
+                    <a class="nav-link" href="#exchanges"> Exchanges <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-exchanges"></span></a>
+                    <a class="nav-link" href="#connectivity"> Connectivity <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-connectivity"></span>
+                    <a class="nav-link" href="#community"> Communities <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-community"></span>
+                    <a class="nav-link" href="#filter"> Security <span class="rounded-pill badge text-bg-secondary align-text-bottom" id="counter-filter"></span></a>
                 </nav>
             </div>
         </div>
